Update Blog “2022-02-13-week-2”

--- a/src/pages/blog/2022-02-13-week-2.md
+++ b/src/pages/blog/2022-02-13-week-2.md
@@ -4,7 +4,7 @@ title: Week 2
 date: 2022-02-18T22:27:00.000Z
 description: Khalid's 2ste week stage binnen Brightest.
 featuredpost: true
-featuredimage: /img/bureau.jpg
+featuredimage: /img/stagemeeting.png
 tags:
   - manualtest
   - automatictest
