--- a/src/pages/blog/2022-02-13-week-2.md
+++ b/src/pages/blog/2022-02-13-week-2.md
@@ -2,7 +2,7 @@
 templateKey: blog-post
 title: Week 2
 date: 2022-02-18T22:27:00.000Z
-description: Khalid's 2ste week stage binnen Brightest.
+description: Khalid's 2de week stage binnen Brightest.
 featuredpost: true
 featuredimage: /img/stagemeeting.png
 tags:
