Update Blog “2022-02-25-week-3”

--- a/src/pages/blog/2022-02-25-week-3.md
+++ b/src/pages/blog/2022-02-25-week-3.md
@@ -8,7 +8,7 @@ featuredimage: /img/miniuml.png
 ---
 ## Dag 11 | 21 februari 2022
 
-We zijn nu aangekomen aan week 3 van onze stageperiodehet begon allereerst met een meeting met onze stagementor welke progress wij hebben gemaakt in week 2 met alle testcases die wij hebben uitgeschreven en getest voor elke testscenario voor web. Deze maandag had ik besloten om de testcases voor de testscenario van de registratie screen en eventueel nog de order screen van Mobile uit te schrijven
+We zijn nu aangekomen aan week 3 van onze stageperiode het begon allereerst met een meeting met onze stagementor welke progress wij hebben gemaakt in week 2 met alle testcases die wij hebben uitgeschreven en getest voor elke testscenario voor web. Deze maandag had ik besloten om de testcases voor de testscenario van de registratie screen en eventueel nog de order screen van Mobile uit te schrijven
 
 ## Dag 12 | 22 februari 2022
 
@@ -16,11 +16,9 @@ Dag 12 was mijn goal om alle testscases voor elke testscenario voor Mobile uit t
 
 ## Dag 13 | 23 februari 2022
 
-Dag 13 zaten we terug op kantoor in Kontich. Wij hebben een meeting gehouden Frederique fysiek op kantoor en hadden gevraagd i.v.m. ons probleem dat we IOS niet kunnen runnen omdat het betalend is, wij hebben dan een work around gevonden en aan de vorige stagiaire gevraagd om de source code door te sturen. We kregen de Url van Gittea en hadden access om de source code van de native applicatie te downloaden. aangezien dat er nieuwe dependencies was alles out-dated en moest alles terug updated gebracht worden, hierbij was mijn collega Huegues mee bezig om het probleem te solven. Hij heeft meer info verteld hoe het framework er eigenlijk zal moeten uitzien als in een 'NutShell'.
+Dag 13 zaten we terug op kantoor in Kontich. Wij hebben een meeting gehouden Frederique fysiek op kantoor en hadden gevraagd i.v.m. ons probleem dat we IOS niet kunnen runnen omdat het betalend is, wij hebben dan een work around gevonden en aan de vorige stagiaire gevraagd om de source code door te sturen. We kregen de Url van Gittea en hadden access om de source code van de native applicatie te downloaden. aangezien dat er nieuwe dependencies was alles out-dated en moest alles terug updated gebracht worden, hierbij was mijn collega Hugues mee bezig om het probleem te solven. Hij heeft meer info verteld hoe het framework er eigenlijk zal moeten uitzien als in een 'NutShell'.
 
 "Zie Afbeelding"
-
-
 
 ![](https://cdn.discordapp.com/attachments/940500175183552533/946350005671833630/IMG_20220223_162454.jpg)
 
@@ -29,3 +27,5 @@ Dag 13 zaten we terug op kantoor in Kontich. Wij hebben een meeting gehouden Fre
 Dag 14 zijn wij als team begonnen nadenken over implementaties van verschilende principles en patterns in onze framework: high level design opstellen en proberen uit te werken volgens de richtlijnen die wij ontvangen hebben van Frederique. (Page Object Models, Helpers, Extentions, Custome wrappers ... )
 
 ## Dag 15 | 25 februari 2022
+
+Tenslotte beland bij dag 15. Hier keken we samen David en Frederique of dat de doelstellingen voor deze week volbracht waren. We hebben onze testcases voor web en mobile getoond en de gevonden bugs uitgelegd. De bugs waren deels hetzelfde in web als mobile, maar er waren ook verschillende bugs aanwezig. Dit wijst op de effectiviteit van de uitgeschreven testcases. Vervolgens hebben we uitgelegd hoe we ons framework willen designen en na de goedkeuring van de supervisors, hebben we de design verder gezet. In de namiddag heb ik deze blog aangevuld en wat voorbereid op de intervisiemoment van 14u30
