Update Blog “2022-03-13-week-5”

--- a/src/pages/blog/2022-03-13-week-5.md
+++ b/src/pages/blog/2022-03-13-week-5.md
@@ -30,3 +30,5 @@ Dag 24 ben ik terug gaan kijken naar mijn Pages en heb ik daar de code zitten re
 ## Dag 25 | 11 maart 2022
 
 Tenslotte zijn wij geëindigd op dag 25. Hierbij zijn we even samen gekomen met het team en onze projectplanning uit te breiden, dat was de vraag van David. Daarna ben ik de Scroller extension gaan opzoeken om later te implementeren in onze automation framework. Tenslotte heb ik testen geschreven met onze Automation framework en met POM structuur. Zo heb ik nu 2 verschillende solution programs waar wij morgen een kleine demo zullen demonstreren. De test zal hetzelfde zijn, maar de code is veel cleaner.
+
+![](/img/testing.png "Our Framework with POM & Selenium Framework & without POM")
