Update Blog “2022-05-18-week-12”

--- a/src/pages/blog/2022-05-18-week-12.md
+++ b/src/pages/blog/2022-05-18-week-12.md
@@ -15,7 +15,7 @@ Maandag 2 mei is week 12 van start gegaan. De rest van studenten hebben hun ISTQ
 
 ## Dag 57 | 03 Mei 2022
 
-Dag 57 kregen wij een introductie van Web automation en Mobile automation. Hoewel wij een framework hebben gemaakt, konden we Web Automation verrichten met een software genaamd Katalon. Easy to use and understand, een paar oefeningen hebben wij gemaakt en in de namiddag overgegaan naar lichte codeerwerk. Het was tijd voor Android automation aan de hand van Groovy, lijkt sterk op Java maar nog meer readable De IDE hebben wij gebruik gemaakt van Android Studio.
+Dag 57 kregen wij een introductie van Web automation en Mobile automation. Hoewel wij een framework hebben gemaakt, konden we Web Automation verrichten met een software genaamd Katalon. Easy to use and understand, een paar oefeningen hebben wij gemaakt en in de namiddag overgegaan naar lichte codeerwerk. Het was tijd voor Android automation aan de hand van Espresso, lijkt sterk op Java maar nog meer readable De IDE hebben wij gebruik gemaakt van Android Studio.
 
 ## Dag 58 | 04 Mei 2022
 
