--- a/src/pages/blog/2022-05-29-week-14.md
+++ b/src/pages/blog/2022-05-29-week-14.md
@@ -20,11 +20,11 @@ Dag 67 heb ik een review gedaan van onze presentatie dat alles wat gezegd moet w
 
 ## Dag 68 | 18 Mei 2022
 
-Dag 68 werd iedereen verwacht op kantoor en hebben wij de tijd genomen om de presentatie in te oefenen. Iets na de middag hebben we een tweede dry-run gehouden. De feedback die we hebben geïmplementeerd in onze powerpoint lieten het verschil goed zien tussen de eerste en tweede dry-run, het was opmerkelijk beter en waren ervan overtuigd dat het goed ging komen voor de finale presentatie. Hierna ben ik begonnen met de UML voor Mobile op te stellen.
+Dag 68 werd iedereen verwacht op kantoor en hebben wij de tijd genomen om de presentatie in te oefenen. Iets na de middag hebben we een tweede dry-run gehouden. De feedback die we hebben geïmplementeerd in onze powerpoint lieten het verschil goed zien tussen de eerste en tweede dry-run, het was opmerkelijk beter en waren ervan overtuigd dat het goed ging komen voor de finale presentatie, ze hebben wel terug nieuwe feedback gegeven op onze 2de dry-run. Hierna ben ik begonnen met de UML voor Mobile op te stellen.
 
 ## Dag 69 | 19 Mei 2022
 
-Dag 69 hebben we de feedback met z'n allen nog een bijgenomen van de tweede dry-run en geïmplementeerd in onze powerpoint. 
+Dag 69 hebben we de feedback met z'n allen nog eens bijgenomen van de tweede dry-run en geïmplementeerd in onze powerpoint. 
 
 ## Dag 70 | 20 Mei 2022
 
